# DeepSeek-Infra

./: .dockerignore  .env.example  .gitignore  .secrets.baseline  AGENTS.md  CHANGELOG.md  Dockerfile  README.en.md  README.md  ROADMAP.en.md  ROADMAP.md  content_brief.md  docker-compose.hybrid-test.yml  docker-compose.rust.yml  docker-compose.yml  launch.bat  launch.vbs  plan.md  pyproject.toml  requirements-browser.txt  requirements-dev.txt
.github/workflows/: ci.yml
android/app/: build.gradle
benchmarks/: README.md  __init__.py  bench_rag_document_preparation.py  bench_rust_sidecar_release.py  bench_semantic_cache.py
deepseek-infra-deck/: _design.md  _outline.md  deepseek-infra-deck.pptd
deepseek_infra/: app.py  desktop_app.py
design-preview/: index.html  package.json  scheme-a.html  scheme-b.html  scheme-c.html  server.js
docs/: 4_0_RC_READINESS.md  4_0_SUPPORT_POLICY.md  AGENT_EVAL.md  API.md  APK.md  ARCHITECTURE.md  AUTOMATION.md  BROWSER_CONTROL.md  COMPATIBILITY.md  DEMO.md  DEMO_3_0.md  DEPLOYMENT.md  EDGE_ROUTER_RUNBOOK.md  EVAL_REPORTS.md  EVIDENCE_INDEX.md  EXPORTS.md  FRONTEND_MODULES.md  GATEWAY_REQUEST_PREPARATION_PARITY.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  MCP_PROTOCOL_PREPARATION_PARITY.md  MEDIA.md  MEMORY.md  PRE_4_0_QUALITY_BASELINE.md  RAG_DOCUMENT_PREPARATION_PARITY.md  RAG_PARITY_BASELINE.md  RAG_VECTOR_BINARY_TRANSPORT.md  RELEASE_CHECKLIST.md  RELEASE_READINESS.md  RELEASE_READINESS_3_1_X.md  RUNTIME_DOCTOR.md  RUST_CANDIDATE_AUDIT_3_4.md  RUST_GATEWAY_SIDECAR.md  RUST_HYBRID_RUNTIME_RUNBOOK.md  RUST_MIGRATION_ROADMAP.md  RUST_SIDECAR_PERFORMANCE.md  SECURITY.md  SECURITY_SMOKE.md  SEMANTIC_CACHE_BINARY_EMBEDDINGS.md  SKILLS.md  (+3 more)
evals/: README.md
examples/: a2a_compat_smoke.py  a2a_interop_peer.py  edge_router_smoke.py
frontend/: buildIdentity.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
release/: 4_0_protocol_contract.json  4_0_rc_requirements.json  4_0_runtime_decision.json
rust/: Cargo.toml  Dockerfile
rust/crates/deepseek-core/: Cargo.toml
rust/crates/deepseek-core/src/: lib.rs
rust/crates/deepseek-gateway/: Cargo.toml
rust/crates/deepseek-gateway/src/: lib.rs  main.rs  observability.rs  policy_routes.rs  request_preparation.rs
rust/crates/deepseek-mcp/: Cargo.toml
rust/crates/deepseek-mcp/src/: handler.rs  lib.rs  protocol_preparation.rs  registry.rs
rust/crates/deepseek-policy/: Cargo.toml
rust/crates/deepseek-policy/src/: audit.rs  capability.rs  lib.rs  path_guard.rs  url_guard.rs
rust/crates/deepseek-rag/: Cargo.toml
rust/crates/deepseek-rag/src/: chunk.rs  citation.rs  document_preparation.rs  index.rs  lib.rs  query.rs  score.rs  vector.rs  vector_binary.rs
rust/fixtures/mcp/: error-response.json  initialize-request.json  invalid-method-request.json  tools-call-echo-request.json  tools-call-request.json  tools-call-unknown-request.json  tools-list-request.json
scripts/: _smoke_common.py  assemble_release_evidence.py  build_exe.py  build_frontend.py  capture_evidence_context.py  check_4_0_rc_readiness.py  check_frontend_bundle.py  check_gateway_request_parity.py  check_mcp_protocol_parity.py  check_rag_document_preparation_parity.py  check_rag_parity.py  check_rag_vector_binary_parity.py  doctor.py  generate_4_0_contract_evidence.py  generate_rag_document_preparation_cases.py  generate_release_evidence.py  migrate_semantic_cache_embeddings.py  preflight_release.py  prepare_evidence_artifact.py  record_python_coverage_stability.py  record_rust_sidecar_image.py  release.py  release_evidence.py  report_coverage_debt.py  run_rust_coverage.py  run_rust_sidecar_benchmarks.py  smoke_a2a_compat.py  smoke_a2a_external_peer.py  smoke_automation.py  smoke_browser.py  smoke_context_taint.py  smoke_edge_router.py  smoke_frontend_browser.py  smoke_ga.py  smoke_hybrid_runtime.py  smoke_mcp_compat.py  smoke_mcp_headless_bridge.py  smoke_media.py  smoke_openai_compatible_sdks.py  smoke_release.py  (+16 more)
static/: gemini.css  index.html  styles.css  sw.js  theme_boot.js  vaultr-brutalist.css
tests/: conftest.py  test_4_0_protocol_contract.py  test_4_0_rc_readiness.py  test_4_0_runtime_decision.py  test_4_0_upgrade_contract.py  test_a2a.py  test_a2a_compat_contract.py  test_a2a_external_peer_evidence.py  test_a2a_external_peer_smoke.py  test_agent_eval_replay.py  test_agent_recording_normalizer.py  test_agent_runs.py  test_agent_state.py  test_android_entry.py  test_app.py  test_architecture_docs.py  test_automation_runtime.py  test_automation_runtime_edges.py  test_browser_downloads_edge_cases.py  test_browser_eval_runner.py  test_browser_failure_paths.py  test_browser_runtime.py  test_browser_session_edges.py  test_browser_skills.py  test_budget_manager.py  test_config.py  test_config_edge_cases.py  test_config_gaps.py  test_context_engine.py  test_context_taint.py  test_coverage_debt_report.py  test_deepseek_client_failure_paths.py  test_desktop_app.py  test_docs_encoding_sanity.py  test_docs_language_navigation.py  test_doctor.py  test_edge_inference.py  test_edge_inference_failures.py  test_encoding_regression.py  test_eval_harness.py  (+107 more)
(+1351 files in other folders)
