[project]
name = "deepseek-infra"
version = "2.1.7"
description = "Local-first agentic AI infrastructure platform: LLM gateway, agent DAG runtime, MCP tool hub, A2A mesh, local RAG, observability."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# 与 requirements.txt 保持同源（requirements*.txt 仍是日常安装入口，
# 这里是规范元数据 + uv pip compile 的锁定来源）。
dependencies = [
    "openpyxl>=3.1.0",
    "pypdf>=4.0.0",
    "PyMuPDF>=1.24.0",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "multipart>=1.3,<2",
    "defusedxml>=0.7,<1",
    "customtkinter>=5.2,<6",
    "pywebview>=5,<6",
    "python-pptx>=0.6.23",
    "python-docx>=1.1.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "types-openpyxl",
    "pip-audit>=2.7.0",
    "bandit>=1.7.8",
    "detect-secrets>=1.5.0",
]
rag = [
    "sqlite-vec>=0.1.6,<1",
    "onnxruntime>=1.18,<2",
    "tokenizers>=0.19,<1",
    "numpy>=1.26,<3",
]
edge = ["llama-cpp-python>=0.3.0,<1"]
ocr = [
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.13",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
]
build = ["pyinstaller>=6.6,<7"]

[project.urls]
Repository = "https://github.com/leizd/deepseek"
Changelog = "https://github.com/leizd/deepseek/blob/main/CHANGELOG.md"

[tool.ruff]
line-length = 140
target-version = "py310"
extend-exclude = ["audit-cleanup-*", ".test-*", "pytest-cache-files-*"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --strict-markers"
markers = [
    "integration: tests that spin up a real HTTP server",
    "slow: tests that take more than one second",
]

[tool.coverage.run]
source = ["deepseek_infra"]
omit = ["tests/*", "static/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = '(^|[\\/])(audit-cleanup-[^\\/]*|\.test-[^\\/]*|pytest-cache-files-[^\\/]*)($|[\\/])'
