[workspace]
members = [
    "crates/deepseek-core",
    "crates/deepseek-gateway",
    "crates/deepseek-mcp",
    "crates/deepseek-policy",
    "crates/deepseek-rag",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/leizd/DeepSeek-Infra"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum = "0.7"
blake2 = "0.10"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
lto = true
