[package]
name = "deepseek-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
deepseek-core = { path = "../deepseek-core" }
deepseek-mcp = { path = "../deepseek-mcp" }
deepseek-policy = { path = "../deepseek-policy" }
deepseek-rag = { path = "../deepseek-rag" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
