[package]
name = "deepseek-rag"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake2 = { workspace = true }
deepseek-core = { path = "../deepseek-core" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
